--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/material": "^5.9.3",
+    "@mui/x-date-pickers": "^5.0.0-beta.4",
     "@prisma/client": "^4.1.1",
+    "date-fns": "^2.29.1",
+    "moment": "^2.29.4",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
